# distributed_point_functions

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod
.bazelci/: presubmit.yml
.github/workflows/: presubmit.yml
bazel/: farmhash.BUILD
dcf/: BUILD  distributed_comparison_function.cc  distributed_comparison_function.h  distributed_comparison_function.proto  distributed_comparison_function_benchmark.cc  distributed_comparison_function_test.cc
dcf/fss_gates/: BUILD  multiple_interval_containment.cc  multiple_interval_containment.h  multiple_interval_containment.proto  multiple_interval_containment_benchmark.cc  multiple_interval_containment_test.cc
dcf/fss_gates/prng/: BUILD  basic_rng.h  basic_rng_test.cc  prng.h
dpf/: BUILD  aes_128_fixed_key_hash.cc  aes_128_fixed_key_hash.h  aes_128_fixed_key_hash_test.cc  distributed_point_function.cc  distributed_point_function.h  distributed_point_function.proto  distributed_point_function_benchmark.cc  distributed_point_function_test.cc  int_mod_n.cc  int_mod_n.h  int_mod_n_benchmark.cc  int_mod_n_test.cc  tuple.h  tuple_test.cc  xor_wrapper.h
dpf/internal/: BUILD  aes_128_fixed_key_hash_hwy_test.cc  array_conversions.h  array_conversions_test.cc  evaluate_prg_hwy.cc  evaluate_prg_hwy.h  evaluate_prg_hwy_test.cc  get_hwy_mode.cc  maybe_deref_span_test.cc  proto_validator.cc  proto_validator.h  proto_validator_test.cc  proto_validator_test.textproto  pseudorandom_generator.cc  pseudorandom_generator.h  pseudorandom_generator_test.cc  status_matchers.cc  status_matchers.h  value_type_helpers.cc  value_type_helpers.h  value_type_helpers_test.cc
dpf/key_generation_protocol/: BUILD  key_generation_protocol.cc  key_generation_protocol.h  key_generation_protocol.proto  key_generation_protocol_client.cc  key_generation_protocol_rpc.proto  key_generation_protocol_rpc_impl.cc  key_generation_protocol_rpc_impl.h  key_generation_protocol_server.cc  key_generation_protocol_test.cc
experiments/: BUILD  README.md  synthetic_data_benchmarks.cc
experiments/data/: 128_1048576_1048576_0.1.csv  128_1048576_1048576_0.5.csv  128_1048576_1048576_uniform.csv  32_1048576_1048576_0.1.csv  32_1048576_1048576_0.5.csv  32_1048576_1048576_uniform.csv
pir/: BUILD  canonical_status_payload_uris.h  cuckoo_hashed_dpf_pir_database.cc  cuckoo_hashed_dpf_pir_database.h  cuckoo_hashed_dpf_pir_database_test.cc  cuckoo_hashing_sparse_dpf_pir_client.cc  cuckoo_hashing_sparse_dpf_pir_client.h  cuckoo_hashing_sparse_dpf_pir_client_test.cc  cuckoo_hashing_sparse_dpf_pir_server.cc  cuckoo_hashing_sparse_dpf_pir_server.h  cuckoo_hashing_sparse_dpf_pir_server_benchmark.cc  cuckoo_hashing_sparse_dpf_pir_server_test.cc  dense_dpf_pir_client.cc  dense_dpf_pir_client.h  dense_dpf_pir_client_test.cc  dense_dpf_pir_database.cc  dense_dpf_pir_database.h  dense_dpf_pir_database_benchmark.cc  dense_dpf_pir_database_test.cc  dense_dpf_pir_server.cc  dense_dpf_pir_server.h  dense_dpf_pir_server_benchmark.cc  dense_dpf_pir_server_test.cc  dpf_pir_client.h  dpf_pir_server.cc  dpf_pir_server.h  dpf_pir_server_test.cc  pir_client.h  pir_database_interface.h  pir_key_value_pair.h  pir_server.h  private_information_retrieval.proto  simple_hashed_dpf_pir_database.cc  simple_hashed_dpf_pir_database.h  simple_hashed_dpf_pir_database_test.cc  simple_hashing_sparse_dpf_pir_client.cc  simple_hashing_sparse_dpf_pir_client.h  simple_hashing_sparse_dpf_pir_client_test.cc  simple_hashing_sparse_dpf_pir_server.cc  simple_hashing_sparse_dpf_pir_server.h  (+2 more)
pir/hashing/: BUILD  cuckoo_hash_table.cc  cuckoo_hash_table.h  cuckoo_hash_table_test.cc  farm_hash_family.cc  farm_hash_family.h  farm_hash_family_test.cc  hash_family.cc  hash_family.h  hash_family_config.cc  hash_family_config.h  hash_family_config.proto  hash_family_config_test.cc  hash_family_test.cc  multiple_choice_hash_table.cc  multiple_choice_hash_table.h  multiple_choice_hash_table_test.cc  sha256_hash_family.cc  sha256_hash_family.h  sha256_hash_family_test.cc  simple_hash_table.cc  simple_hash_table.h  simple_hash_table_test.cc
pir/internal/: BUILD  inner_product_hwy.cc  inner_product_hwy.h  inner_product_hwy_test.cc
pir/prng/: BUILD  aes_128_ctr_seeded_prng.cc  aes_128_ctr_seeded_prng.h  aes_128_ctr_seeded_prng_test.cc
pir/testing/: BUILD  encrypt_decrypt.cc  encrypt_decrypt.h  encrypt_decrypt_test.cc  mock_pir_client.h  mock_pir_database.cc  mock_pir_database.h  mock_pir_database_test.cc  mock_pir_server.h  pir_selection_bits.cc  pir_selection_bits.h  pir_selection_bits_test.cc  request_generator.cc  request_generator.h  request_generator_test.cc
pir/testing/data/: BUILD
prng/: basic_rng.h  basic_rng_test.cc  prng.h
